[gd_scene load_steps=20 format=3 uid="uid://d06hakxi1tnc8"]

[ext_resource type="Theme" uid="uid://bq6q5uvxtm357" path="res://ui/themes/middle_background.tres" id="1_oebc5"]
[ext_resource type="Theme" uid="uid://y6tdkpsu24sm" path="res://ui/themes/dark_panel.tres" id="2_e80r5"]
[ext_resource type="Script" path="res://ui/screens/navigation/clock.gd" id="3_5ygb3"]
[ext_resource type="PackedScene" uid="uid://bcaj67ttyd84r" path="res://ui/widgets/circle_gauge/circle_gauge.tscn" id="4_3ikq8"]
[ext_resource type="Script" path="res://ui/screens/navigation/timerate.gd" id="4_s71s8"]
[ext_resource type="Script" path="res://ui/screens/navigation/frame_label.gd" id="5_6nun4"]
[ext_resource type="Script" path="res://ui/widgets/circle_gauge/circle_gauge.gd" id="5_cykad"]
[ext_resource type="Script" path="res://ui/screens/navigation/instruments_populator.gd" id="6_4ln7h"]
[ext_resource type="LabelSettings" uid="uid://b5j6mwf5fenb7" path="res://ui/themes/info_label.tres" id="7_quxj8"]
[ext_resource type="PackedScene" uid="uid://14nd8yy5f85e" path="res://ui/widgets/slider/slider.tscn" id="8_4t4jw"]
[ext_resource type="PackedScene" uid="uid://d0e1osx21d7u2" path="res://scenes/attitude/NavballScene.tscn" id="9_5oiv6"]
[ext_resource type="PackedScene" uid="uid://1sgfn61bmfrt" path="res://scenes/orbit/OrbitScene.tscn" id="10_n4sgr"]
[ext_resource type="Script" path="res://ui/data_grid.gd" id="10_rnj3v"]
[ext_resource type="Script" path="res://ui/autopilot_handler.gd" id="11_am0j0"]
[ext_resource type="PackedScene" uid="uid://w0adn324ymo3" path="res://ui/widgets/light_button/light_button.tscn" id="12_poj7e"]
[ext_resource type="ButtonGroup" uid="uid://444nnqo6ich8" path="res://ui/attitude_button_group.tres" id="13_4xkmw"]
[ext_resource type="PackedScene" uid="uid://ctjdd1ssvl2eb" path="res://ui/alerts_panel/alerts_panel.tscn" id="16_jw1r5"]
[ext_resource type="PackedScene" uid="uid://jpb6h7avv8co" path="res://ui/screens/navigation/waypoints/waypoints.tscn" id="17_gsl3v"]
[ext_resource type="Script" path="res://ui/screens/navigation/selection_panel.gd" id="19_b130n"]

[node name="NavigationScreen" type="Panel"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_oebc5")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="TopBar" type="Panel" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 0.05

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/TopBar"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="CenterContainer" parent="VBoxContainer/TopBar/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.15

[node name="Label" type="Label" parent="VBoxContainer/TopBar/HBoxContainer/MarginContainer"]
layout_mode = 2
theme = ExtResource("2_e80r5")
text = "T+00d00h00m00s"
script = ExtResource("3_5ygb3")

[node name="MarginContainer2" type="CenterContainer" parent="VBoxContainer/TopBar/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.1

[node name="Label" type="Label" parent="VBoxContainer/TopBar/HBoxContainer/MarginContainer2"]
layout_mode = 2
theme = ExtResource("2_e80r5")
text = "Ã—1k"
script = ExtResource("4_s71s8")

[node name="MarginContainer5" type="MarginContainer" parent="VBoxContainer/TopBar/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.1
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 8
theme_override_constants/margin_bottom = 8

[node name="ButtonPanel" type="Panel" parent="VBoxContainer/TopBar/HBoxContainer/MarginContainer5"]
layout_mode = 2
size_flags_horizontal = 3
theme = ExtResource("2_e80r5")

[node name="Button" type="Button" parent="VBoxContainer/TopBar/HBoxContainer/MarginContainer5/ButtonPanel"]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 8.0
offset_top = 8.0
offset_right = -8.0
offset_bottom = -8.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 16
action_mode = 0
text = "RESET"

[node name="FrameLabel" type="Label" parent="VBoxContainer/TopBar/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.8
theme = ExtResource("2_e80r5")
text = "EARTH_CENTER_INERTIAL"
horizontal_alignment = 2
script = ExtResource("5_6nun4")

[node name="Control" type="Control" parent="VBoxContainer/TopBar/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.15

[node name="MarginContainer4" type="MarginContainer" parent="VBoxContainer/TopBar/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.15
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 8

[node name="ButtonPanel" type="Panel" parent="VBoxContainer/TopBar/HBoxContainer/MarginContainer4"]
layout_mode = 2
size_flags_horizontal = 3
theme = ExtResource("2_e80r5")

[node name="Button" type="Button" parent="VBoxContainer/TopBar/HBoxContainer/MarginContainer4/ButtonPanel"]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 8.0
offset_top = 8.0
offset_right = -8.0
offset_bottom = -8.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 16
toggle_mode = true
action_mode = 0
text = "MENU"

[node name="MainSection" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="Instruments" type="VBoxContainer" parent="VBoxContainer/MainSection"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.15
script = ExtResource("6_4ln7h")

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer/MainSection/Instruments"]
layout_mode = 2
theme_override_constants/margin_top = 20

[node name="Gauge1" parent="VBoxContainer/MainSection/Instruments/MarginContainer" instance=ExtResource("4_3ikq8")]
layout_mode = 2
script = ExtResource("5_cykad")
label_text = "ACC"

[node name="MarginContainer2" type="MarginContainer" parent="VBoxContainer/MainSection/Instruments"]
layout_mode = 2
theme_override_constants/margin_top = 20
theme_override_constants/margin_bottom = 20

[node name="Gauge2" parent="VBoxContainer/MainSection/Instruments/MarginContainer2" instance=ExtResource("4_3ikq8")]
layout_mode = 2
script = ExtResource("5_cykad")
label_text = "RP"

[node name="PumpSlider" parent="VBoxContainer/MainSection/Instruments" instance=ExtResource("8_4t4jw")]
layout_mode = 2
title = "PUMP SPEED"
bottom_carrot_label_text = "D"
top_carrot_label_text = "H"
green_zone_bounds = Vector2(0.2, 0.8)

[node name="TempSlider" parent="VBoxContainer/MainSection/Instruments" instance=ExtResource("8_4t4jw")]
layout_mode = 2
title = "PUMP TEMP"
bottom_carrot_label_text = "D"
top_carrot_label_text = "H"
green_zone_bounds = Vector2(0.05, 0.4)

[node name="FuelSlider" parent="VBoxContainer/MainSection/Instruments" instance=ExtResource("8_4t4jw")]
layout_mode = 2
title = "FUEL QUANT"
bottom_carrot_label_text = "D"
top_carrot_label_text = "H"
green_zone_bounds = Vector2(0.1, 1)

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/MainSection/Instruments"]
layout_mode = 2
theme = ExtResource("2_e80r5")

[node name="Label" type="Label" parent="VBoxContainer/MainSection/Instruments/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 1
text = "-- ORBIT --"
horizontal_alignment = 1

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer/MainSection/Instruments/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_right = 20

[node name="DataGrid" type="GridContainer" parent="VBoxContainer/MainSection/Instruments/VBoxContainer/MarginContainer"]
layout_mode = 2
columns = 2
script = ExtResource("10_rnj3v")

[node name="Title2" type="Label" parent="VBoxContainer/MainSection/Instruments/VBoxContainer/MarginContainer/DataGrid"]
layout_mode = 2
size_flags_horizontal = 3
text = "ALT"
label_settings = ExtResource("7_quxj8")

[node name="Data2" type="Label" parent="VBoxContainer/MainSection/Instruments/VBoxContainer/MarginContainer/DataGrid"]
layout_mode = 2
size_flags_horizontal = 3
text = "1,475"
label_settings = ExtResource("7_quxj8")
horizontal_alignment = 2
clip_text = true

[node name="Title3" type="Label" parent="VBoxContainer/MainSection/Instruments/VBoxContainer/MarginContainer/DataGrid"]
layout_mode = 2
size_flags_horizontal = 3
text = "VEL"
label_settings = ExtResource("7_quxj8")

[node name="Data3" type="Label" parent="VBoxContainer/MainSection/Instruments/VBoxContainer/MarginContainer/DataGrid"]
layout_mode = 2
size_flags_horizontal = 3
text = "7.768"
label_settings = ExtResource("7_quxj8")
horizontal_alignment = 2
clip_text = true

[node name="Title4" type="Label" parent="VBoxContainer/MainSection/Instruments/VBoxContainer/MarginContainer/DataGrid"]
layout_mode = 2
size_flags_horizontal = 3
text = "ECC"
label_settings = ExtResource("7_quxj8")

[node name="Data4" type="Label" parent="VBoxContainer/MainSection/Instruments/VBoxContainer/MarginContainer/DataGrid"]
layout_mode = 2
size_flags_horizontal = 3
text = "0.324"
label_settings = ExtResource("7_quxj8")
horizontal_alignment = 2
clip_text = true

[node name="Navball" type="MarginContainer" parent="VBoxContainer/MainSection/Instruments"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 1.3
theme_override_constants/margin_top = 20
theme_override_constants/margin_bottom = 20

[node name="SubViewportContainer" type="SubViewportContainer" parent="VBoxContainer/MainSection/Instruments/Navball"]
layout_mode = 2
size_flags_vertical = 3
stretch = true

[node name="SubViewport" type="SubViewport" parent="VBoxContainer/MainSection/Instruments/Navball/SubViewportContainer"]
own_world_3d = true
transparent_bg = true
handle_input_locally = false
size = Vector2i(2, 2)
render_target_update_mode = 4

[node name="NavballRoot" parent="VBoxContainer/MainSection/Instruments/Navball/SubViewportContainer/SubViewport" instance=ExtResource("9_5oiv6")]

[node name="Control" type="Control" parent="VBoxContainer/MainSection/Instruments"]
layout_mode = 2
size_flags_vertical = 3

[node name="CenterBar" type="VBoxContainer" parent="VBoxContainer/MainSection"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Map" type="Panel" parent="VBoxContainer/MainSection/CenterBar"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource("2_e80r5")

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer/MainSection/CenterBar/Map"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 4
theme_override_constants/margin_top = 4
theme_override_constants/margin_right = 4
theme_override_constants/margin_bottom = 4

[node name="SubViewportContainer" type="SubViewportContainer" parent="VBoxContainer/MainSection/CenterBar/Map/MarginContainer"]
layout_mode = 2
stretch = true

[node name="SubViewport" type="SubViewport" parent="VBoxContainer/MainSection/CenterBar/Map/MarginContainer/SubViewportContainer"]
own_world_3d = true
handle_input_locally = false
physics_object_picking = true
size = Vector2i(2, 2)
render_target_update_mode = 4

[node name="OrbitRoot" parent="VBoxContainer/MainSection/CenterBar/Map/MarginContainer/SubViewportContainer/SubViewport" instance=ExtResource("10_n4sgr")]
camera_mode = true
planet_orbits = true
zoomable = true

[node name="Autopilot" type="MarginContainer" parent="VBoxContainer/MainSection/CenterBar"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 0.2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/MainSection/CenterBar/Autopilot"]
layout_mode = 2

[node name="Titles" type="HBoxContainer" parent="VBoxContainer/MainSection/CenterBar/Autopilot/VBoxContainer"]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer/MainSection/CenterBar/Autopilot/VBoxContainer/Titles"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.4

[node name="Label" type="Label" parent="VBoxContainer/MainSection/CenterBar/Autopilot/VBoxContainer/Titles/MarginContainer"]
layout_mode = 2
theme = ExtResource("2_e80r5")
text = "ATTITUDE"
horizontal_alignment = 1

[node name="MarginContainer3" type="MarginContainer" parent="VBoxContainer/MainSection/CenterBar/Autopilot/VBoxContainer/Titles"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.2

[node name="Label" type="Label" parent="VBoxContainer/MainSection/CenterBar/Autopilot/VBoxContainer/Titles/MarginContainer3"]
layout_mode = 2
theme = ExtResource("2_e80r5")
text = "MODS"
horizontal_alignment = 1

[node name="MarginContainer2" type="MarginContainer" parent="VBoxContainer/MainSection/CenterBar/Autopilot/VBoxContainer/Titles"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.1

[node name="Label" type="Label" parent="VBoxContainer/MainSection/CenterBar/Autopilot/VBoxContainer/Titles/MarginContainer2"]
layout_mode = 2
theme = ExtResource("2_e80r5")
text = "NAV"
horizontal_alignment = 1

[node name="MarginContainer4" type="MarginContainer" parent="VBoxContainer/MainSection/CenterBar/Autopilot/VBoxContainer/Titles"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.1

[node name="Label" type="Label" parent="VBoxContainer/MainSection/CenterBar/Autopilot/VBoxContainer/Titles/MarginContainer4"]
layout_mode = 2
theme = ExtResource("2_e80r5")
text = "AUTOPILOT"
horizontal_alignment = 1

[node name="ButtonPanel" type="Panel" parent="VBoxContainer/MainSection/CenterBar/Autopilot/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme = ExtResource("2_e80r5")
script = ExtResource("11_am0j0")

[node name="HBoxContainer2" type="HBoxContainer" parent="VBoxContainer/MainSection/CenterBar/Autopilot/VBoxContainer/ButtonPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_vertical = 3
theme_override_constants/separation = 0

[node name="AttitudePanel" type="Panel" parent="VBoxContainer/MainSection/CenterBar/Autopilot/VBoxContainer/ButtonPanel/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.4
theme = ExtResource("2_e80r5")
theme_type_variation = &"LightBorderSidePanel"

[node name="ButtonContainer" type="HBoxContainer" parent="VBoxContainer/MainSection/CenterBar/Autopilot/VBoxContainer/ButtonPanel/HBoxContainer2/AttitudePanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_vertical = 3

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer/MainSection/CenterBar/Autopilot/VBoxContainer/ButtonPanel/HBoxContainer2/AttitudePanel/ButtonContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/margin_left = 16
theme_override_constants/margin_top = 16
theme_override_constants/margin_right = 16
theme_override_constants/margin_bottom = 16

[node name="LightButtonPanel" parent="VBoxContainer/MainSection/CenterBar/Autopilot/VBoxContainer/ButtonPanel/HBoxContainer2/AttitudePanel/ButtonContainer/MarginContainer" groups=["Attitude Modes"] instance=ExtResource("12_poj7e")]
layout_mode = 2
label_text = "HDG"
button_group = ExtResource("13_4xkmw")

[node name="MarginContainer2" type="MarginContainer" parent="VBoxContainer/MainSection/CenterBar/Autopilot/VBoxContainer/ButtonPanel/HBoxContainer2/AttitudePanel/ButtonContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/margin_left = 16
theme_override_constants/margin_top = 16
theme_override_constants/margin_right = 16
theme_override_constants/margin_bottom = 16

[node name="LightButtonPanel" parent="VBoxContainer/MainSection/CenterBar/Autopilot/VBoxContainer/ButtonPanel/HBoxContainer2/AttitudePanel/ButtonContainer/MarginContainer2" groups=["Attitude Modes"] instance=ExtResource("12_poj7e")]
layout_mode = 2
label_text = "CRS"
button_group = ExtResource("13_4xkmw")

[node name="MarginContainer3" type="MarginContainer" parent="VBoxContainer/MainSection/CenterBar/Autopilot/VBoxContainer/ButtonPanel/HBoxContainer2/AttitudePanel/ButtonContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/margin_left = 16
theme_override_constants/margin_top = 16
theme_override_constants/margin_right = 16
theme_override_constants/margin_bottom = 16

[node name="LightButtonPanel" parent="VBoxContainer/MainSection/CenterBar/Autopilot/VBoxContainer/ButtonPanel/HBoxContainer2/AttitudePanel/ButtonContainer/MarginContainer3" groups=["Attitude Modes"] instance=ExtResource("12_poj7e")]
layout_mode = 2
label_text = "TRG"
button_group = ExtResource("13_4xkmw")

[node name="MarginContainer4" type="MarginContainer" parent="VBoxContainer/MainSection/CenterBar/Autopilot/VBoxContainer/ButtonPanel/HBoxContainer2/AttitudePanel/ButtonContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/margin_left = 16
theme_override_constants/margin_top = 16
theme_override_constants/margin_right = 16
theme_override_constants/margin_bottom = 16

[node name="LightButtonPanel" parent="VBoxContainer/MainSection/CenterBar/Autopilot/VBoxContainer/ButtonPanel/HBoxContainer2/AttitudePanel/ButtonContainer/MarginContainer4" groups=["Attitude Modes"] instance=ExtResource("12_poj7e")]
layout_mode = 2
label_text = "NRM"
button_group = ExtResource("13_4xkmw")

[node name="AttitudePanel2" type="Panel" parent="VBoxContainer/MainSection/CenterBar/Autopilot/VBoxContainer/ButtonPanel/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.2
theme = ExtResource("2_e80r5")
theme_type_variation = &"LightBorderSidePanel"

[node name="VBoxContainer" type="HBoxContainer" parent="VBoxContainer/MainSection/CenterBar/Autopilot/VBoxContainer/ButtonPanel/HBoxContainer2/AttitudePanel2"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer/MainSection/CenterBar/Autopilot/VBoxContainer/ButtonPanel/HBoxContainer2/AttitudePanel2/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/margin_left = 16
theme_override_constants/margin_top = 16
theme_override_constants/margin_right = 16
theme_override_constants/margin_bottom = 16

[node name="LightButtonPanel" parent="VBoxContainer/MainSection/CenterBar/Autopilot/VBoxContainer/ButtonPanel/HBoxContainer2/AttitudePanel2/VBoxContainer/MarginContainer" groups=["Autopilot Keys"] instance=ExtResource("12_poj7e")]
layout_mode = 2
label_text = "INV"

[node name="MarginContainer2" type="MarginContainer" parent="VBoxContainer/MainSection/CenterBar/Autopilot/VBoxContainer/ButtonPanel/HBoxContainer2/AttitudePanel2/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/margin_left = 16
theme_override_constants/margin_top = 16
theme_override_constants/margin_right = 16
theme_override_constants/margin_bottom = 16

[node name="LightButtonPanel" parent="VBoxContainer/MainSection/CenterBar/Autopilot/VBoxContainer/ButtonPanel/HBoxContainer2/AttitudePanel2/VBoxContainer/MarginContainer2" groups=["Autopilot Keys"] instance=ExtResource("12_poj7e")]
layout_mode = 2
label_text = "STAB"

[node name="NavPanel" type="Panel" parent="VBoxContainer/MainSection/CenterBar/Autopilot/VBoxContainer/ButtonPanel/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.1
theme = ExtResource("2_e80r5")
theme_type_variation = &"LightBorderSidePanel"

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer/MainSection/CenterBar/Autopilot/VBoxContainer/ButtonPanel/HBoxContainer2/NavPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/margin_left = 16
theme_override_constants/margin_top = 16
theme_override_constants/margin_right = 16
theme_override_constants/margin_bottom = 16

[node name="LightButtonPanel" parent="VBoxContainer/MainSection/CenterBar/Autopilot/VBoxContainer/ButtonPanel/HBoxContainer2/NavPanel/MarginContainer" groups=["Attitude Modes", "Autopilot Keys"] instance=ExtResource("12_poj7e")]
layout_mode = 2
label_text = "NAV"

[node name="AutoPanel" type="Panel" parent="VBoxContainer/MainSection/CenterBar/Autopilot/VBoxContainer/ButtonPanel/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.1
theme = ExtResource("2_e80r5")
theme_type_variation = &"LightBorderSidePanel"

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer/MainSection/CenterBar/Autopilot/VBoxContainer/ButtonPanel/HBoxContainer2/AutoPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/margin_left = 16
theme_override_constants/margin_top = 16
theme_override_constants/margin_right = 16
theme_override_constants/margin_bottom = 16

[node name="LightButtonPanel" parent="VBoxContainer/MainSection/CenterBar/Autopilot/VBoxContainer/ButtonPanel/HBoxContainer2/AutoPanel/MarginContainer" groups=["Autopilot Keys"] instance=ExtResource("12_poj7e")]
layout_mode = 2
label_text = "AUTO"

[node name="RightSidebar" type="VBoxContainer" parent="VBoxContainer/MainSection"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.3

[node name="Waypoints" parent="VBoxContainer/MainSection/RightSidebar" instance=ExtResource("17_gsl3v")]
layout_mode = 2

[node name="Alerts" parent="VBoxContainer/MainSection/RightSidebar" instance=ExtResource("16_jw1r5")]
layout_mode = 2
size_flags_stretch_ratio = 0.3

[node name="Selection" type="MarginContainer" parent="VBoxContainer/MainSection/RightSidebar"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 0.3
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/MainSection/RightSidebar/Selection"]
layout_mode = 2

[node name="Title" type="Label" parent="VBoxContainer/MainSection/RightSidebar/Selection/VBoxContainer"]
layout_mode = 2
theme = ExtResource("2_e80r5")
text = "SELECTION"
horizontal_alignment = 1

[node name="MainPanel" type="Panel" parent="VBoxContainer/MainSection/RightSidebar/Selection/VBoxContainer" node_paths=PackedStringArray("orbit_scene_root", "about")]
layout_mode = 2
size_flags_vertical = 3
theme = ExtResource("2_e80r5")
script = ExtResource("19_b130n")
orbit_scene_root = NodePath("../../../../CenterBar/Map/MarginContainer/SubViewportContainer/SubViewport/OrbitRoot")
about = NodePath("ScrollContainer/MarginContainer/VBoxContainer/About")

[node name="ScrollContainer" type="ScrollContainer" parent="VBoxContainer/MainSection/RightSidebar/Selection/VBoxContainer/MainPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
horizontal_scroll_mode = 3
vertical_scroll_mode = 3

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer/MainSection/RightSidebar/Selection/VBoxContainer/MainPanel/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 8

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/MainSection/RightSidebar/Selection/VBoxContainer/MainPanel/ScrollContainer/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="About" type="Label" parent="VBoxContainer/MainSection/RightSidebar/Selection/VBoxContainer/MainPanel/ScrollContainer/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
size_flags_vertical = 3
text = "NULL"
label_settings = ExtResource("7_quxj8")
autowrap_mode = 2

[node name="FrameButton" type="Button" parent="VBoxContainer/MainSection/RightSidebar/Selection/VBoxContainer/MainPanel/ScrollContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 16
action_mode = 0
text = "SET FRAME"

[node name="CameraButton" type="Button" parent="VBoxContainer/MainSection/RightSidebar/Selection/VBoxContainer/MainPanel/ScrollContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 16
action_mode = 0
text = "FOCUS VIEW"

[node name="WaypointButton" type="Button" parent="VBoxContainer/MainSection/RightSidebar/Selection/VBoxContainer/MainPanel/ScrollContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 16
action_mode = 0
text = "ADD WAYPOINT"

[node name="RequestButton" type="Button" parent="VBoxContainer/MainSection/RightSidebar/Selection/VBoxContainer/MainPanel/ScrollContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 16
action_mode = 0
text = "REQUEST BERTH"

[connection signal="pressed" from="VBoxContainer/TopBar/HBoxContainer/MarginContainer5/ButtonPanel/Button" to="VBoxContainer/TopBar/HBoxContainer/MarginContainer/Label" method="_on_reset"]
